Added: All plugins as PluginCollections

--- a/Assets/Plugins/GamersGrotto/Internal Plugins/Package Exporter/Editor/gamersgrotto.package_exporter.editor.asmdef
+++ b/Assets/Plugins/GamersGrotto/Internal Plugins/Package Exporter/Editor/gamersgrotto.package_exporter.editor.asmdef
@@ -1,10 +1,7 @@
 {
     "name": "gamersgrotto.package_exporter.editor",
     "rootNamespace": "gamersgrotto.package_exporter.editor",
-    "references": [
-        "GUID:c1e6df4f4351075408a480ad3811dfb9",
-        "GUID:7a2a6876f0a934c4ba904bb34b0ea728"
-    ],
+    "references": [],
     "includePlatforms": [
         "Editor"
     ],
