--- a/Assets/Plugins/GamersGrotto/Internal Plugins/Plugin Creator/Editor/gamersgrotto.plugin_creator.editor.asmdef
+++ b/Assets/Plugins/GamersGrotto/Internal Plugins/Plugin Creator/Editor/gamersgrotto.plugin_creator.editor.asmdef
@@ -2,7 +2,8 @@
     "name": "gamersgrotto.plugin_creator.editor",
     "rootNamespace": "gamersgrotto.plugin_creator.editor",
     "references": [
-        "GUID:7ac65d2cd30c05745930c26fd3ea30d6"
+        "GUID:7ac65d2cd30c05745930c26fd3ea30d6",
+        "GUID:2004501daaf4adc42ae4cbf2d49aaa0a"
     ],
     "includePlatforms": [
         "Editor"
