Changed: Assembly definitions
- Removed .Runtime From Names
- Removed .Runtime From Asset Names
- Removed .Runtime From Namespaces
- Changed Namespaces from Lowercase to Uppercase

--- a/Assets/Plugins/GamersGrottoToolkit/Core/Editor/gamersgrotto.core.editor.asmdef
+++ b/Assets/Plugins/GamersGrottoToolkit/Core/Editor/gamersgrotto.core.editor.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "gamersgrotto.core.editor",
-    "rootNamespace": "gamersgrotto.core.editor",
+    "rootNamespace": "GamersGrotto.Core.Editor",
     "references": [
         "GUID:7a2a6876f0a934c4ba904bb34b0ea728"
     ],
