--- a/Assets/Plugins/GamersGrottoToolkit/Modules/Broker/Runtime/gamersgrotto.broker.asmdef
+++ b/Assets/Plugins/GamersGrottoToolkit/Modules/Broker/Runtime/gamersgrotto.broker.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "gamersgrotto.audio_system.runtime",
-    "rootNamespace": "gamersgrotto.audio_system.runtime",
+    "name": "gamersgrotto.broker",
+    "rootNamespace": "GamersGrotto.Broker",
     "references": [
         "GUID:7a2a6876f0a934c4ba904bb34b0ea728"
     ],
