--- a/Assets/Plugins/Internal Plugins/Custom Editor Styles/Editor/gamersgrotto.custom_editor_styles.editor.asmdef
+++ b/Assets/Plugins/Internal Plugins/Custom Editor Styles/Editor/gamersgrotto.custom_editor_styles.editor.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "gamersgrotto.custom_editor_styles.editor",
-    "rootNamespace": "gamersgrotto.custom_editor_styles.editor",
+    "rootNamespace": "GamersGrotto.Custom_Editor_Styles.Editor",
     "references": [],
     "includePlatforms": [
         "Editor"
