--- a/Assets/Plugins/GamersGrottoToolkit/Modules/Game Events/Editor/gamersgrotto.game_events.editor.asmdef
+++ b/Assets/Plugins/GamersGrottoToolkit/Modules/Game Events/Editor/gamersgrotto.game_events.editor.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "gamersgrotto.game_events.editor",
-    "rootNamespace": "gamersgrotto.game_events.editor",
+    "rootNamespace": "GamersGrotto.Game_Events.Editor",
     "references": [
         "GUID:c1e6df4f4351075408a480ad3811dfb9",
         "GUID:7a2a6876f0a934c4ba904bb34b0ea728"
