--- a/Assets/Plugins/GamersGrottoToolkit/Modules/Game Events/Runtime/gamersgrotto.game_events.asmdef
+++ b/Assets/Plugins/GamersGrottoToolkit/Modules/Game Events/Runtime/gamersgrotto.game_events.asmdef
@@ -1,10 +1,8 @@
 {
-    "name": "gamersgrotto.in_game_console.runtime",
-    "rootNamespace": "gamersgrotto.in_game_console.runtime",
+    "name": "gamersgrotto.game_events",
+    "rootNamespace": "GamersGrotto.Game_Events",
     "references": [
-        "GUID:7a2a6876f0a934c4ba904bb34b0ea728",
-        "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:7a2a6876f0a934c4ba904bb34b0ea728"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
