--- a/Assets/Plugins/GamersGrottoToolkit/Modules/In Game Console/Runtime/gamersgrotto.in_game_console.asmdef
+++ b/Assets/Plugins/GamersGrottoToolkit/Modules/In Game Console/Runtime/gamersgrotto.in_game_console.asmdef
@@ -1,8 +1,10 @@
 {
-    "name": "gamersgrotto.save_game_system.runtime",
-    "rootNamespace": "gamersgrotto.save_game_system.runtime",
+    "name": "gamersgrotto.in_game_console",
+    "rootNamespace": "GamersGrotto.In_Game_Console",
     "references": [
-        "GUID:7a2a6876f0a934c4ba904bb34b0ea728"
+        "GUID:7a2a6876f0a934c4ba904bb34b0ea728",
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:6055be8ebefd69e48b49212b09b47b2f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
