--- a/Assets/Plugins/GamersGrottoToolkit/Modules/Unity Callbacks/Runtime/gamersgrotto.unity_callbacks.runtime.asmdef
+++ b/Assets/Plugins/GamersGrottoToolkit/Modules/Unity Callbacks/Runtime/gamersgrotto.unity_callbacks.runtime.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "gamersgrotto.unity_callbacks.runtime",
-    "rootNamespace": "gamersgrotto.unity_callbacks.runtime",
+    "name": "gamersgrotto.unity_callbacks",
+    "rootNamespace": "GamersGrotto.Unity_Callbacks",
     "references": [
         "GUID:7a2a6876f0a934c4ba904bb34b0ea728"
     ],
