--- a/Assets/Plugins/Internal Plugins/Package Exporter/Editor/gamersgrotto.package_exporter.editor.asmdef
+++ b/Assets/Plugins/Internal Plugins/Package Exporter/Editor/gamersgrotto.package_exporter.editor.asmdef
@@ -1,6 +1,6 @@
 {
     "name": "gamersgrotto.package_exporter.editor",
-    "rootNamespace": "gamersgrotto.package_exporter.editor",
+    "rootNamespace": "GamersGrotto.Package_Exporter.Editor",
     "references": [
         "GUID:7ac65d2cd30c05745930c26fd3ea30d6"
     ],
