Changed: Assembly Asset names are now no longer .ToLower()

--- a/Assets/Plugins/GamersGrottoToolkit/Core/Runtime/gamersgrotto.core.asmdef
+++ b/Assets/Plugins/GamersGrottoToolkit/Core/Runtime/gamersgrotto.core.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "gamersgrotto.core",
+    "name": "GamersGrotto.Core",
     "rootNamespace": "GamersGrotto.Core",
     "references": [],
     "includePlatforms": [],
