--- a/Assets/Plugins/GamersGrottoToolkit/Modules/In Game Console/Runtime/gamersgrotto.in_game_console.asmdef
+++ b/Assets/Plugins/GamersGrottoToolkit/Modules/In Game Console/Runtime/gamersgrotto.in_game_console.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "gamersgrotto.in_game_console",
+    "name": "GamersGrotto.In_Game_Console",
     "rootNamespace": "GamersGrotto.In_Game_Console",
     "references": [
         "GUID:7a2a6876f0a934c4ba904bb34b0ea728",
