--- a/Assets/Plugins/GamersGrottoToolkit/Modules/Unity Callbacks/Runtime/GamersGrotto.Unity_Callbacks.asmdef
+++ b/Assets/Plugins/GamersGrottoToolkit/Modules/Unity Callbacks/Runtime/GamersGrotto.Unity_Callbacks.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "gamersgrotto.unity_callbacks",
+    "name": "GamersGrotto.Unity_Callbacks",
     "rootNamespace": "GamersGrotto.Unity_Callbacks",
     "references": [
         "GUID:7a2a6876f0a934c4ba904bb34b0ea728"
