--- a/Assets/Plugins/Internal Plugins/Custom Editor Styles/Editor/gamersgrotto.custom_editor_styles.editor.asmdef
+++ b/Assets/Plugins/Internal Plugins/Custom Editor Styles/Editor/gamersgrotto.custom_editor_styles.editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "gamersgrotto.custom_editor_styles.editor",
+    "name": "GamersGrotto.Custom_Editor_Styles.Editor",
     "rootNamespace": "GamersGrotto.Custom_Editor_Styles.Editor",
     "references": [],
     "includePlatforms": [
