--- a/Assets/Plugins/GamersGrottoToolkit/Core/Editor/gamersgrotto.core.editor.asmdef
+++ b/Assets/Plugins/GamersGrottoToolkit/Core/Editor/gamersgrotto.core.editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "gamersgrotto.core.editor",
+    "name": "GamersGrotto.Core.Editor",
     "rootNamespace": "GamersGrotto.Core.Editor",
     "references": [
         "GUID:7a2a6876f0a934c4ba904bb34b0ea728"
