--- a/Assets/Plugins/GamersGrottoToolkit/Modules/Audio System/Runtime/gamersgrotto.audio_system.asmdef
+++ b/Assets/Plugins/GamersGrottoToolkit/Modules/Audio System/Runtime/gamersgrotto.audio_system.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "gamersgrotto.audio_system",
-    "rootNamespace": "Gamersgrotto.Audio_system",
+    "name": "GamersGrotto.Audio_System",
+    "rootNamespace": "Gamersgrotto.Audio_System",
     "references": [
         "GUID:7a2a6876f0a934c4ba904bb34b0ea728"
     ],
