--- a/Assets/Plugins/GamersGrottoToolkit/Modules/Broker/Editor/gamersgrotto.broker.editor.asmdef
+++ b/Assets/Plugins/GamersGrottoToolkit/Modules/Broker/Editor/gamersgrotto.broker.editor.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "gamersgrotto.broker.editor",
+    "name": "GamersGrotto.Broker.Editor",
     "rootNamespace": "GamersGrotto.Broker.Editor",
     "references": [
         "GUID:c1e6df4f4351075408a480ad3811dfb9",
