--- a/Assets/Plugins/GamersGrottoToolkit/Modules/Broker/Runtime/gamersgrotto.broker.asmdef
+++ b/Assets/Plugins/GamersGrottoToolkit/Modules/Broker/Runtime/gamersgrotto.broker.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "gamersgrotto.broker",
+    "name": "GamersGrotto.Broker",
     "rootNamespace": "GamersGrotto.Broker",
     "references": [
         "GUID:7a2a6876f0a934c4ba904bb34b0ea728"
