--- a/Assets/Plugins/GamersGrottoToolkit/Modules/Damage System/Runtime/gamersgrotto.damage_system.asmdef
+++ b/Assets/Plugins/GamersGrottoToolkit/Modules/Damage System/Runtime/gamersgrotto.damage_system.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "gamersgrotto.damage_system",
+    "name": "GamersGrotto.Damage_System",
     "rootNamespace": "GamersGrotto.Damage_System",
     "references": [
         "GUID:7a2a6876f0a934c4ba904bb34b0ea728"
