--- a/.gitignore
+++ b/.gitignore
@@ -515,14 +515,19 @@ FodyWeavers.xsd
 !/[Aa]ssets/Plugins/FMOD/**/*.dll
 
 # Don't ignore images and gizmos used by FMOD in the Unity Editor
-#!/[Aa}ssets/Gizmos/FMOD/*
-#!/[Aa}ssets/Editor Default Resources/FMOD/*
+!/[Aa}ssets/Gizmos/FMOD/*
+!/[Aa}ssets/Editor Default Resources/FMOD/*
 
 # Ignore the Cache-file since it is updated locally either way
+/[Aa]ssets/Plugins/FMOD/Cache/*
 /[Aa]ssets/**/FMODStudioCache.asset
 /[Aa]ssets/**/FMODStudioCache.asset.meta
 /[Aa]ssets/Plugins/FMOD/Cache.meta
 /[Aa]ssets/Plugins/FMOD/Cache/Editor.meta
+
+# Ignore bank files in the StreamingAssets folder.
+/[Aa]ssets/StreamingAssets/**/*.bank
+/[Aa]ssets/StreamingAssets/**/*.bank.meta
 
 # Log-files
 fmod.log
