--- a/Assets/Plugins/GamersGrottoToolkit/Modules/In Game Console/Runtime/gamersgrotto.in_game_console.asmdef
+++ b/Assets/Plugins/GamersGrottoToolkit/Modules/In Game Console/Runtime/gamersgrotto.in_game_console.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "GUID:7a2a6876f0a934c4ba904bb34b0ea728",
         "GUID:75469ad4d38634e559750d17036d5f7c",
-        "GUID:6055be8ebefd69e48b49212b09b47b2f"
+        "GUID:6055be8ebefd69e48b49212b09b47b2f",
+        "GUID:1491147abca9d7d4bb7105af628b223e"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
