--- a/Assets/Samples/Multiplayer Sample/GamersGrotto.Multiplayer_Sample.asmdef
+++ b/Assets/Samples/Multiplayer Sample/GamersGrotto.Multiplayer_Sample.asmdef
@@ -5,7 +5,9 @@
         "GUID:7a2a6876f0a934c4ba904bb34b0ea728",
         "GUID:1491147abca9d7d4bb7105af628b223e",
         "GUID:586bacebd2e376741a00b55c9b809cf1",
-        "GUID:75469ad4d38634e559750d17036d5f7c"
+        "GUID:75469ad4d38634e559750d17036d5f7c",
+        "GUID:37e17ffe38d86ae48bc3207e83ffef88",
+        "GUID:fe25561d224ed4743af4c60938a59d0b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
