--- a/Assets/Samples/Multiplayer Sample/GamersGrotto.Multiplayer_Sample.asmdef
+++ b/Assets/Samples/Multiplayer Sample/GamersGrotto.Multiplayer_Sample.asmdef
@@ -7,7 +7,11 @@
         "GUID:586bacebd2e376741a00b55c9b809cf1",
         "GUID:75469ad4d38634e559750d17036d5f7c",
         "GUID:37e17ffe38d86ae48bc3207e83ffef88",
-        "GUID:fe25561d224ed4743af4c60938a59d0b"
+        "GUID:fe25561d224ed4743af4c60938a59d0b",
+        "GUID:5540e30183c82e84b954c033c388e06c",
+        "GUID:f2d49d9fa7e7eb3418e39723a7d3b92f",
+        "GUID:f2d49d9fa7e7eb3418e39723a7d3b92f",
+        "GUID:f2d49d9fa7e7eb3418e39723a7d3b92f"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
