--- a/Assets/Samples/Multiplayer Sample/GamersGrotto.Multiplayer_Sample.asmdef
+++ b/Assets/Samples/Multiplayer Sample/GamersGrotto.Multiplayer_Sample.asmdef
@@ -11,7 +11,8 @@
         "GUID:5540e30183c82e84b954c033c388e06c",
         "GUID:f2d49d9fa7e7eb3418e39723a7d3b92f",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:28dac4e745bd2d54a89017a57b21081e"
+        "GUID:28dac4e745bd2d54a89017a57b21081e",
+        "GUID:e0cd26848372d4e5c891c569017e11f1"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
