--- a/Assets/Plugins/GamersGrottoToolkit/Modules/Broker/Runtime/gamersgrotto.broker.asmdef
+++ b/Assets/Plugins/GamersGrottoToolkit/Modules/Broker/Runtime/gamersgrotto.broker.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "GamersGrotto.Broker",
-    "rootNamespace": "GamersGrotto.Broker",
+    "name": "GamersGrotto.GG_Broker",
+    "rootNamespace": "GamersGrotto.GG_Broker",
     "references": [
         "GUID:7a2a6876f0a934c4ba904bb34b0ea728"
     ],
