--- a/Assets/Samples/Multiplayer Sample/GamersGrotto.Multiplayer_Sample.asmdef
+++ b/Assets/Samples/Multiplayer Sample/GamersGrotto.Multiplayer_Sample.asmdef
@@ -12,7 +12,8 @@
         "GUID:f2d49d9fa7e7eb3418e39723a7d3b92f",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:28dac4e745bd2d54a89017a57b21081e",
-        "GUID:e0cd26848372d4e5c891c569017e11f1"
+        "GUID:e0cd26848372d4e5c891c569017e11f1",
+        "GUID:a83cd3ee99a361f4cae3336d511874a0"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
